finished dblp pr